--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
-<html>
-<head>
-  <meta charset='UTF-8'/>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
-  <meta http-equiv='X-UA-Compatible' content='ie=edge'/>
-  <title>Document</title>
-  <script src='js/index.js'></script>
-  <link rel='stylesheet' href='index.css'/>
-</head>
-<body>
-  <div id='main'>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UFT-8">
+        <meta name="description" content="Flatdango Code Challenge">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <meta name="author" content="Jacob Muchori Kinyua">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Flatdango</title>
+        <link rel="stylesheet" type="text/css" href="/index.css">
 
-    <h2>GitHub Search</h2>
+    </head>
+    <body id ="main">
+        <h1 id="body-title">Flatiron Movie Theater</h1>
+        <h2 id="body-subtitle">Purchase your movie tickets here!!</h2>
+        <div id="film-descr" class ="sidenav">
+            <!--our film names go here-->
+        </div>
+        <div id="film-container" class="card">
+            <!--Our fetched data goes here-->
+            <h1 id="film-name">films.id</h1>
+            <img id="film-image" src="">
+            <p id="film-description"></p>
+            <h2 id="film-runtime"></h2>
+            <h2 id="film-showtime"></h2>
+            <h2 id="available-tickets"></h2>
+            <button id="ticket-buyer">Buy Ticket</button>
+        </div>
 
-    <form id='github-form'>
-      <input id='search' type='text' name='search'>
-      <input type='submit' name='submit'/>
-    </form>
-
-    <div id='github-container'>
-      <ul id='user-list'>
-
-      </ul>
-
-      <ul id='repos-list'>
-
-      </ul>
-    </div>
-
-  </div>
-
-</body>
+        <script src="js/index.js"></script>
+    </body>
 </html>
